--- a/Server/Views/screenNotifications.hbs
+++ b/Server/Views/screenNotifications.hbs
@@ -9,10 +9,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <style>
-    body {
-      margin: 7px auto auto;
-    }
-
     .mess {
       position: relative;
       display: inline-block;
@@ -39,31 +35,35 @@
 
     .text-inputform {
       resize: none;
-      width: 550px;
+      width: 100%;
       outline: unset !important;
-      height: 91px;
+      height: 65%;
       border: 0.5px solid #838383;
       padding: 7px;
       border-radius: 8px;
     }
 
     .box-notification {
-      height: 325px;
+      height: 91%;
+      width: 96%;
       margin: 0 14px;
       padding: 14px;
       background: #f1f1f1;
       overflow: auto;
     }
 
-    .text-title {
+    .text-title-Notification {
       text-align: center;
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 600;
-      margin: 8px;
+      padding: 8px;
+      height: 9%;
     }
 
     .width-tab {
       width: 49%;
+      height: 100%;
+      background: white;
     }
 
     /*  dropdow*/
@@ -126,9 +126,9 @@
 
     .input-err {
       resize: none;
-      width: 550px;
+      width: 100%;
       outline: unset !important;
-      height: 82px;
+      height: 65%;
       border: 2px solid red;
       padding: 7px;
       border-radius: 8px;
@@ -137,173 +137,292 @@
     .box-delete {
       display: flex;
       justify-content: end;
+      margin-bottom: 3px;
+      height: 8%;
+      align-items: center;
+    }
+
+
+    .body-Main {
+      display: flex;
+      width: 100%;
+      height: 100%;
+    }
+
+    .box-Main-One {
+      width: 16%;
+      height: 100%;
+      background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
+      display: flex;
+      flex-direction: column;
+    }
+
+    .box-Text-Title {
+      background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
+      height: 13%;
+      width: 100%;
+    }
+
+    .text-Title {
+      color: white;
+      font-size: 24px;
+      padding: 24px;
+      font-family: sans-serif;
+      font-weight: 600;
+    }
+
+    .box-Main-Two {
+      width: 84%;
+      height: 100%;
+    }
+
+    .box-Main-Extra {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .box-infomation {
+      width: 100%;
+      height: 11%;
+    }
+
+    .information {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      justify-content: space-between;
+      padding: 0 18px;
+      background: white;
+      align-items: center;
+    }
+
+    .information-Admin {
+      display: flex;
+      width: 8%;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .link-a:hover {
+      text-decoration: none;
+    }
+
+    .link-a {
+      color: black;
+      font-size: 16px;
+      font-family: sans-serif;
+    }
+
+    .box-order-Main {
+      width: 100%;
+      height: 89%;
+    }
+
+
+    .item-click {
+      height: 87%;
+      width: 100%;
+    }
+
+    .load-Spinner {
+      padding: 20%;
+      width: 100%;
+      text-align: center;
+    }
+    .box-Main {
+      margin: 14px 8px;
+      width: 99%;
+      height: 96%;
+    }
+    .box-Main-Notification {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      justify-content: space-around;
+    }
+    .form-submit {
+      height: 21%;
+      width: 97%;
+      margin: 0 9px;
+    }
+    .box-content-Notification {
+      height: 70%;
+      padding: 10px 0;
+      width: 100%;
+    }
+    .css-buttom{
+      margin-top: 8px;
     }
   </style>
 </head>
 
 <body class="bg-gray-200">
-<div class="flex" id="dataALL" style="height: 100%;">
-  <!--Side Navbar-->
-  <div class="bg-indigo-900 w-1/6 ">
-    <div class=" bg-indigo-800">
-      <div class=" text-xl text-gray-200 uppercase font-bold" style="padding: 33px;">Shop BipBip</div>
-    </div>
-    <div>
-      <a href="/statistic" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
-        <div class="flex" style=" padding: 12px;">
-          <div>
-            <img class="w-5 h-5" src="analytics.png" alt="">
+<div id="dataALL">
+  <div class="body-Main">
+    <div class="box-Main-One">
+      <div class="box-Text-Title">
+        <div class="text-Title">Shop BipBip</div>
+      </div>
+      <div class="item-click">
+        <a href="/statistic" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
+           style="text-decoration: none ">
+          <div class="flex" style=" padding: 12px;">
+            <div>
+              <img class="w-5 h-5" src="analytics.png" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
           </div>
-          <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
-        </div>
-      </a>
-      <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none;display: flex;  ">
-        <div class="flex" style=" padding: 12px;">
-          <div>
-            <img class="w-5 h-5" src="dashboard.png" alt="">
+        </a>
+        <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
+           style="display: flex; text-decoration: none ">
+          <div class="flex" style=" padding: 12px;">
+            <div>
+              <img class="w-5 h-5" src="dashboard.png" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
           </div>
-          <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
-        </div>
-        <span class="badge" style="color: white;font-size: 14px;">\{{donHangMoi}}</span>
-      </a>
-      <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12"
-         style=" text-decoration: none; display: flex; ">
-        <div class="flex" style=" padding: 12px;">
-          <div>
-            <img class="w-5 h-5 " src="messages.png" alt="">
+          <span class="badge" style="color: white;font-size: 14px;">\{{donHangMoi}}</span>
+        </a>
+        <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+          <div class="flex" style="padding: 12px;">
+            <div>
+              <img class="w-5 h-5 " src="messages.png" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
           </div>
-          <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn
-
+          <span class="badge" style="color: white;font-size: 14px;">\{{tinNhanMoi}}</span>
+        </a>
+        <a href="/notifications" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="border-bottom-width: 1px;text-decoration: none">
+          <div class="flex" style=" padding: 12px;">
+            <div>
+              <img class="w-5 h-5" src="notifications.png" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100">Thông báo</div>
           </div>
-
-        </div>
-        <span class="badge" style="color: white;font-size: 14px;">\{{tinNhanMoi}}</span>
-      </a>
-      <a href="/notifications" class="cursor-pointer mess ml-3 mt-3 w-10/12"
-         style="text-decoration: none;border-bottom-width: 1px;">
-        <div class="flex" style=" padding: 12px;">
-          <div>
-            <img class="w-5 h-5" src="notifications.png" alt="">
+        </a>
+        <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+          <div class="flex" style="padding: 12px;">
+            <div>
+              <img class="w-5 h-5 " src="iconuser.png" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100 ">Quản Lý người dùng</div>
           </div>
-          <div class="mx-3 text-sm text-gray-100">Thông báo</div>
-        </div>
-      </a>
-      <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
-        <div class="flex" style="padding: 12px;">
-          <div>
-            <img class="w-5 h-5 " src="iconuser.png" alt="">
+        </a>
+        <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+          <div class="flex" style=" padding: 12px;">
+            <div>
+              <img class="w-5 h-5" src="kho.svg" alt="">
+            </div>
+            <div class="mx-3 text-sm text-gray-100">Kho Hàng</div>
           </div>
-          <div class="mx-3 text-sm text-gray-100 ">Quản Lý người dùng</div>
-        </div>
-      </a>
-      <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
-        <div class="flex" style=" padding: 12px;">
-          <div>
-            <img class="w-5 h-5" src="kho.svg" alt="">
-          </div>
-          <div class="mx-3 text-sm text-gray-100">Kho Hàng</div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div class="flex-1">
-    <div>
-      <div class="bg-white px-2 py-0.5 h-18 flex">
-        <div class="left md:w-3/4 sm:w-1/3 flex p-3">
-          <img src="person.png" class="w-10 h-10" alt="">
-          <span class="block p-2">Admin</span>
-        </div>
-        <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
-          <a href="/login" style=" text-decoration: none; color: black; line-height: 58px; margin-right: 24px; ">Đăng
-            xuất</a>
-        </div>
+        </a>
       </div>
     </div>
-    <!--Top navbar-->
-    <div class="card-container flex m-7 space-x-6 " style=" height: 555px;  justify-content: center;">
-
-      <div id="load" class="spinner-border text-primary"></div>
-
-      <div class="card w-full" id="hienThidata" style="display: none">
-        <div class="card w-full" style="display: flex;flex-direction: row;justify-content: space-between;">
-
-          <div class="width-tab">
-            <div class="text-title">
-              Thông báo tất cả
+    <div class="box-Main-Two">
+      <div class="box-Main-Extra">
+        <div class="box-infomation">
+          <div class="information">
+            <div class="information-Admin">
+              <img src="person.png" class="w-10 h-10" alt="">
+              <span>Admin</span>
             </div>
             <div>
-              <form @submit.prevent="submitNotificationAllApp" class="mb-3" style="margin: 0 14px;">
-                <div>
+              <a class="link-a" href="/login">Đăng xuất</a>
+            </div>
+          </div>
+        </div>
+        <!--Top navbar-->
+        <div class="box-order-Main">
+
+          <div id="load" class="load-Spinner">
+            <div class="spinner-border text-primary"></div>
+          </div>
+
+          <div id="hienThidata" style="display: none">
+            <div class="box-Main">
+              <div class="box-Main-Notification">
+                <div class="width-tab">
+                  <div class="text-title-Notification">
+                    Thông báo tất cả
+                  </div>
+                  <div class="form-submit">
+                    <form @submit.prevent="submitNotificationAllApp" >
+                      <div>
                     <textarea rows="4" cols="50" :class="checkInputNotificationAll ?  'input-err' : 'text-inputform' "
                               type="text"
                               v-model="formDataAllApp.noiDung"></textarea>
-<!--                  <div v-if="checkInputNotificationAll === true " class="text-err">Vui lòng điền thông tin</div>-->
-                  <div class="input-group-append">
-                    <button class="btn btn-primary" style="width: 100%;margin-top: 8px" type="submit">Gửi</button>
+                        <!--                  <div v-if="checkInputNotificationAll === true " class="text-err">Vui lòng điền thông tin</div>-->
+                        <div class="css-buttom">
+                          <button class="btn btn-primary" style="width: 100%;" type="submit">Gửi</button>
+                        </div>
+                      </div>
+                    </form>
+
+                  </div>
+
+                  <div v-if="dataNotificationApp.length !== 0" class="box-content-Notification">
+                    <div class="box-delete">
+                      <div class="text-delete" @click="openModal">Xóa tất cả</div>
+                    </div>
+                    <div class="box-notification">
+                      <div style=" padding: 8px; background: #60eab1; border-radius: 8px; margin-bottom: 8px"
+                           v-for="item in dataNotificationApp">
+                        <div>\{{item.noiDung}}</div>
+                        <div style="text-align: end;font-weight: 600;margin-top: 8px;">\{{formatDate(item.date)}}</div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </form>
-
-            </div>
-
-            <div v-if="dataNotificationApp.length !== 0">
-              <div class="box-delete">
-                <div class="text-delete" @click="openModal">Xóa tất cả</div>
-              </div>
-              <div class="box-notification">
-                <div style=" padding: 8px; background: #60eab1; border-radius: 8px; margin-bottom: 8px"
-                     v-for="item in dataNotificationApp">
-                  <div>\{{item.noiDung}}</div>
-                  <div style="text-align: end;font-weight: 600;margin-top: 8px;">\{{formatDate(item.date)}}</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="width-tab">
-            <div class="text-title">
-              Thông báo cho 1 người dùng
-            </div>
-            <div>
-              <form @submit.prevent="submitOneNotification" class="mb-3" style="margin: 0 14px;">
-                <div>
+                <div class="width-tab">
+                  <div class="text-title-Notification">
+                    Thông báo cho 1 người dùng
+                  </div>
+                  <div  class="form-submit">
+                    <form @submit.prevent="submitOneNotification">
+                      <div>
                     <textarea rows="4" cols="50" :class="checkInputNotificationOne ?  'input-err' : 'text-inputform' "
                               type="text"
                               v-model="formData.noiDung"></textarea>
-                  <div style=" display: flex;  justify-content: space-between; margin-top: 8px;">
-                    <div class="dropdown">
-                      <input type="text" :class="checkInputUserNameOne ?'search-err': 'search'" id="searchInput"
-                             placeholder="Tài khoản" autocomplete="off"
-                             v-model="formData.userName"
-                      >
-                      <div class="options">
-                        <div class="option" v-for="item in nameUserAll">\{{item}}</div>
+                        <div class="css-buttom">
+                          <div class="dropdown">
+                            <input type="text" :class="checkInputUserNameOne ?'search-err': 'search'" id="searchInput"
+                                   placeholder="Tài khoản" autocomplete="off"
+                                   v-model="formData.userName"
+                            >
+                            <div class="options">
+                              <div class="option" v-for="item in nameUserAll">\{{item}}</div>
+                            </div>
+                          </div>
+
+
+                            <button class="btn btn-primary" type="submit">Gửi</button>
+
+                        </div>
+                        <div :class="{'displayNone':checkThongTin}"
+                             style="color: red;font-weight: 700;font-family: sans-serif">
+                          Tài khoản không đúng vui lòng nhập lại
+                        </div>
+                      </div>
+                    </form>
+
+                  </div>
+                  <div v-if="dataNotificationOneApp.length !== 0" class="box-content-Notification">
+                    <div class="box-delete">
+                      <div class="text-delete" @click="openModalXoa">Xóa tất cả</div>
+                    </div>
+                    <div class="box-notification">
+                      <div style="padding: 8px; background: #60eab1; border-radius: 8px;margin-bottom: 8px"
+                           v-for="item in dataNotificationOneApp">
+                        <div style="font-weight: 600;margin-bottom: 8px;">
+                          Tài khoản: \{{item.userName}}
+                        </div>
+                        <div>\{{item.noiDung}}</div>
+                        <div style="text-align: end;font-weight: 600;margin-top: 8px;">\{{formatDate(item.date)}}</div>
                       </div>
                     </div>
-
-                    <div class="input-group-append">
-                      <button class="btn btn-primary" type="submit">Gửi</button>
-                    </div>
                   </div>
-                  <div :class="{'displayNone':checkThongTin}"
-                       style="color: red;font-weight: 700;font-family: sans-serif">
-                    Tài khoản không đúng vui lòng nhập lại
-                  </div>
-                </div>
-              </form>
-
-            </div>
-            <div v-if="dataNotificationOneApp.length !== 0">
-              <div class="box-delete">
-                <div class="text-delete" @click="openModalXoa">Xóa tất cả</div>
-              </div>
-              <div class="box-notification">
-                <div style="padding: 8px; background: #60eab1; border-radius: 8px;margin-bottom: 8px"
-                     v-for="item in dataNotificationOneApp">
-                  <div style="font-weight: 600;margin-bottom: 8px;">
-                    Tài khoản: \{{item.userName}}
-                  </div>
-                  <div>\{{item.noiDung}}</div>
-                  <div style="text-align: end;font-weight: 600;margin-top: 8px;">\{{formatDate(item.date)}}</div>
                 </div>
               </div>
             </div>
@@ -312,7 +431,6 @@
       </div>
     </div>
   </div>
-
   <div class="modal fade" id="xacNhan" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
        aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -334,7 +452,6 @@
       </div>
     </div>
   </div>
-
   <div class="modal fade" id="xacNhanXoa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
        aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -421,11 +538,15 @@
       closeModalXoa() {
         $('#xacNhanXoa').modal('hide');
       },
-      formatDate(vale) {
-        const date = new Date(vale);
+      formatDate(value) {
+        const date = new Date(value);
 
-        const formattedDate = date.toLocaleDateString();
-        const formattedTime = date.toLocaleTimeString();
+        const day = date.getDate();
+        const month = date.getMonth() + 1;
+        const year = date.getFullYear();
+
+        const formattedDate = `${day < 10 ? '0' + day : day}/${month < 10 ? '0' + month : month}/${year}`;
+        const formattedTime = date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
 
         return `${formattedDate} - ${formattedTime}`;
       },
@@ -677,9 +798,6 @@
   vm.GetDataAllNotification();
   vm.GetDataNameUser();
   vm.GetDataAllOneNotification();
-
-</script>
-<script>
 
 </script>
 </html>
