--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -1,9 +1,15 @@
 <html lang="en">
 
 <head>
-  <title>Đơn Hàng</title>
+  <title>Thống kê</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://code.highcharts.com/highcharts.js"></script>
+
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     .mess {
       position: relative;
@@ -29,8 +35,6 @@
     .highcharts-data-table table {
       min-width: 320px;
       max-width: 1179px;
-      height: 400px;
-      margin: 1em auto;
     }
 
     .box-Main {
@@ -160,6 +164,7 @@
       color: black;
       font-size: 16px;
       font-family: sans-serif;
+      text-decoration: none;
     }
 
     .box-order-Main {
@@ -182,17 +187,20 @@
       width: 100%;
       text-align: center;
     }
+
     #container {
-      height: 50%;
+      height: 47%;
       width: 40%;
       position: absolute;
     }
+
     #container2 {
-      height: 50%;
+      height: 46%;
       width: 40%;
       position: absolute;
     }
-    .dropdown-Op{
+
+    .dropdown-Op {
       outline: none;
       padding: 8px;
       border-radius: 8px;
@@ -201,6 +209,8 @@
     }
 
     .box-Main-TK {
+      padding-top: 8px;
+      height: 67%;
       display: flex;
       justify-content: space-around;
     }
@@ -211,6 +221,129 @@
 
     .box-Year {
       width: 49%;
+    }
+
+    .box-All-TK {
+      width: 98%;
+      height: 97%;
+      background: white;
+      margin: 14px;
+    }
+
+    .text-click-L {
+      display: flex;
+      font-size: 20px;
+      font-family: sans-serif;
+      font-weight: 600;
+      width: 20%;
+    }
+
+    .text-item-click {
+      cursor: pointer;
+      padding: 8px 14px;
+    }
+
+    .box-title {
+      height: 5%;
+    }
+
+    .box-total-acc {
+      padding: 8px 14px;
+      height: 33%;
+    }
+
+    .text-top5 {
+      text-align: center;
+      font-size: 21px;
+      font-weight: 600;
+      line-height: 40px;
+    }
+
+    .text-main {
+      line-height: 42px;
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .box-one {
+      height: 7%;
+    }
+
+    .box-two {
+      height: 93%;
+    }
+    .box-size-table {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      padding: 14px 0;
+      height: 13%;
+      width: 100%;
+    }
+
+    .text-box-size-table {
+      font-size: 16px;
+      font-weight: 600;
+      margin-right: 8px;
+    }
+
+    .box-arrow {
+      display: flex;
+      width: 10%;
+      justify-content: space-around;
+    }
+
+    .box-extra-arrow {
+      padding: 6px;
+      border: 0.5px solid;
+      cursor: pointer;
+      margin-right: 2px;
+    }
+
+    .box-extra-arrow:hover {
+      background: #dedede
+    }
+    .box-text-total {
+      display: flex;
+      justify-content: space-around;
+    }
+    .box-one-views {height: 40%;display: flex;justify-content: space-between;padding: 8px 14px;}
+
+    .box-two-view {
+      height: 50%;
+      padding: 8px 14px;
+    }
+
+    .box-one-extra {
+      width: 27%;
+    }
+
+    .box-Ds-Date {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .box-two-extra {
+      width: 68%;
+    }
+
+    .text-Ds {
+      font-size: 17px;
+      font-family: sans-serif;
+      line-height: 48px;
+    }
+
+    .text-top3 {
+      font-size: 18px;
+      font-family: sans-serif;
+      line-height: 44px;
+    }
+    .display-None{
+      display: none;
+    }
+    .backGround{
+      background: white
     }
   </style>
 </head>
@@ -290,47 +423,238 @@
             </div>
           </div>
         </div>
+
         <div class="box-order-Main">
           <div id="load" class="load-Spinner">
             <div class="spinner-border text-primary"></div>
           </div>
-         <div id="hienThidata" style="display: none">
 
-         <div class="box-Main-TK">
-           <div class="box-TopFive">
-             <div>
-              Top 5 sản phẩm bán chạy
-             </div>
-             <figure class="highcharts-figure">
-               <div id="container"></div>
-             </figure>
-           </div>
+          <div id="hienThidata" style="display: none">
 
-           <div class="box-Year">
-             <div style="display: flex;align-items: center">
-               <div>
-                 Thống kê năm:
-               </div>
+            <div class="box-All-TK">
+              <div class="bg-gray-200 box-one">
+                <div class="text-click-L">
+                  <div class="text-item-click" @click="tabOne" :class="{'backGround': boxTwo}">Tổng quan</div>
+                  <div class="text-item-click" @click="tabTwo" :class="{'backGround': boxOne}">Chi tiết</div>
+                </div>
+              </div>
 
-               <select id="dateYearSelect" name="dateYear" class="dropdown-Op">
-                 <option>2020</option>
-                 <option>2021</option>
-                 <option>2022</option>
-                 <option>2023</option>
-                 <option>2024</option>
-                 <option>2025</option>
-                 <option>2026</option>
-                 <option>2027</option>
-                 <option>2028</option>
-                 <option>2029</option>
-               </select>
-             </div>
-             <figure class="highcharts-figure">
-               <div id="container2"></div>
-             </figure>
-           </div>
-         </div>
-         </div>
+              <div class="box-two" :class="{'display-None': boxOne}">
+                <div class="box-total-acc">
+                  <div>
+                    <div class="text-main">
+                      Tài khoản:
+                    </div>
+                    <div>
+                      <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                          <th>Tổng số tài khoản</th>
+                          <th>Tài khoản mới tạo trong tháng</th>
+                          <th>Tài khoản đang hoạt động</th>
+                          <th>Tài khoản bị khóa</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                          <td>0</td>
+                          <td>0</td>
+                          <td>0</td>
+                          <td>0</td>
+                        </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  <div class="box-text-total">
+                    <div class="text-main">
+                      Tổng số sản phẩm đang có: 100
+                    </div>
+                    <div class="text-main">
+                      Tổng doanh số năm: 25.000.000
+                    </div>
+                  </div>
+                </div>
+                <div class="box-Main-TK">
+
+                  <div class="box-TopFive">
+                    <div class="text-top5">
+                      Top 5 sản phẩm bán chạy
+                    </div>
+                    <figure class="highcharts-figure">
+                      <div id="container"></div>
+                    </figure>
+                  </div>
+
+                  <div class="box-Year">
+                    <div style="display: flex;align-items: center;justify-content: center;" class="text-top5">
+                      <div>
+                        Thống kê doanh số các tháng năm:
+                      </div>
+
+                      <select id="dateYearSelect" name="dateYear" class="dropdown-Op">
+                        <option>2020</option>
+                        <option>2021</option>
+                        <option>2022</option>
+                        <option>2023</option>
+                        <option>2024</option>
+                        <option>2025</option>
+                        <option>2026</option>
+                        <option>2027</option>
+                        <option>2028</option>
+                        <option>2029</option>
+                      </select>
+                    </div>
+                    <figure class="highcharts-figure">
+                      <div id="container2"></div>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+              <div class="box-two" :class="{'display-None': boxTwo}" style="background: white">
+                  <div class="box-one-views">
+                    <div class="box-one-extra">
+                      <div class="box-Ds-Date">
+                       <div class="text-Ds">
+                         Doanh số trong ngày
+                       </div>
+                        <div>
+                          <input type="date" class="form-control" >
+                        </div>
+                      </div>
+                      <div  style="display: flex">
+                       <div class="text-Ds">
+                         Tổng số tiền:
+                       </div>
+                        <div class="text-Ds" style="font-weight: 600; color: red;margin-left: 8px">
+                          2.000.000vnd
+                        </div>
+                      </div>
+                    </div>
+
+                     <div class="box-two-extra">
+                       <div class="text-top3">
+                        Top khách hàng mua nhiều
+                       </div>
+                       <div>
+                         <table class="table table-bordered">
+                           <thead>
+                           <tr>
+                             <th style="text-align: center;width: 110px">STT</th>
+                             <th style="text-align: center;">Tên</th>
+                             <th style="text-align: center;">Tài khoản đặt</th>
+                             <th style="text-align: center;">Số hóa đơn</th>
+                           </tr>
+                           </thead>
+                           <tbody>
+                           <tr>
+                             <td>0</td>
+                             <td>0</td>
+                             <td>0</td>
+                           </tr>
+                           <tr>
+                             <td>0</td>
+                             <td>0</td>
+                             <td>0</td>
+                           </tr>
+                           <tr>
+                             <td>0</td>
+                             <td>0</td>
+                             <td>0</td>
+                           </tr>
+                           </tbody>
+                         </table>
+                       </div>
+                     </div>
+                  </div>
+
+                <div class="box-two-view">
+                 <div class="text-top3"> Đơn hàng mới trong ngày</div>
+                  <div>
+                    <table class="table table-bordered">
+                      <thead>
+                      <tr>
+                        <th style="text-align: center;width: 110px">STT</th>
+                        <th style="text-align: center;">Mã Đơn Hàng</th>
+                        <th style="text-align: center;">Tài khoản đặt</th>
+                        <th style="text-align: center;width: 120px">Số lượng</th>
+                        <th style="text-align: center;width: 130px">Giá tiền</th>
+                        <th style="text-align: center;width: 100px">Chi tiết</th>
+                        <th style="text-align: center;width: 145px;">Trạng thái</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <tr>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      <tr>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      <tr>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      <tr>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      <tr>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="box-size-table">
+                    <div class="text-box-size-table">1 của tổng số 1</div>
+                    <div class="box-arrow">
+                      <div class="box-extra-arrow"  >
+                        <img src="next.png" style="width: 24px" alt="">
+                      </div>
+                      <div class="box-extra-arrow"  >
+                        <img src="back-arrow.png" style="width: 24px" alt="">
+                      </div>
+                      <div class="box-extra-arrow"  >
+                        <img src="right-arrow.png" style="width: 24px" alt="">
+                      </div>
+                      <div class="box-extra-arrow"  >
+                        <img src="back.png" style="width: 24px" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
 
         </div>
       </div>
@@ -348,6 +672,8 @@
     data: {
       tinNhanMoi: 0,
       donHangMoi: 0,
+      boxOne:false,
+      boxTwo:true
     },
     mounted() {
       const socket = io();
@@ -365,6 +691,16 @@
       }
     },
     methods: {
+      tabTwo(){
+          var self = this
+        self.boxOne = true
+        self.boxTwo = false
+      },
+      tabOne(){
+        var self = this
+        self.boxOne = false
+        self.boxTwo = true
+      },
       GetAllDataChat: function () {
         var self = this;
         fetch('/chatAllShop', {
@@ -422,12 +758,13 @@
 
     sreach(selectedValue)
   }
+
   var selectElement = document.getElementById("dateYearSelect");
   selectElement.onchange = handleSelectChange;
   selectElement.value = "2023";
 
-  function sreach(year){
-    fetch('/statistics/revenue/'+year, {
+  function sreach(year) {
+    fetch('/statistics/revenue/' + year, {
       method: 'GET',
       headers: {
         'Content-Type': 'application/json'
@@ -442,7 +779,7 @@
             dataAllRevenue.push(data[i].totalRevenue)
             dataAllProfit.push(data[i].totalProfit)
           }
-          highChartColum(year,dataAllRevenue, dataAllProfit)
+          highChartColum(year, dataAllRevenue, dataAllProfit)
         })
         .catch(error => {
           console.error(error);
@@ -488,7 +825,7 @@
             dataAllRevenue.push(data[i].totalRevenue)
             dataAllProfit.push(data[i].totalProfit)
           }
-          highChartColum(2023,dataAllRevenue, dataAllProfit)
+          highChartColum(2023, dataAllRevenue, dataAllProfit)
         })
         .catch(error => {
           console.error(error);
@@ -496,6 +833,7 @@
   }
 
   loadData()
+
   //vẽ biểu đồ
   function highChart(dataAll) {
     Highcharts.chart('container', {
@@ -549,7 +887,7 @@
     });
   }
 
-  function highChartColum(year,dataAllRevenue, dataAllProfit) {
+  function highChartColum(year, dataAllRevenue, dataAllProfit) {
     Highcharts.chart('container2', {
       credits: {
         enabled: false
