--- a/Server/Views/customer.hbs
+++ b/Server/Views/customer.hbs
@@ -137,6 +137,22 @@
         .navbar-placeholder {
             height: 56px;
         }
+
+        .sticky-header {
+            position: fixed;
+            width: 100%;
+            background-color: #fff;
+            z-index: 1000;
+        }
+
+        .table-container {
+            overflow-y: auto;
+            max-height: 70vh;
+        }
+
+        .table {
+            margin-top: 50px;
+        }
     </style>
 </head>
 
@@ -229,7 +245,7 @@
                     </select>
                 </div>
 
-                <div class="table-responsive">
+                <div class="table-container">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
